--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,22 +2,22 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          
+
       - name: Install dependencies
         run: npm install
-      
+
       - name: Build
         run: npm run build
         env:
@@ -27,6 +27,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./build  
-          keep_files: false    
-          force_orphan: true  
+          publish_dir: ./build
+          keep_files: false
+          force_orphan: true
